Fixed spacing

--- a/src/styles/sidebar/components/category.scss
+++ b/src/styles/sidebar/components/category.scss
@@ -17,7 +17,7 @@
     display: block;
     float: left;
     width: 50%;
-    padding: 0.3em 0.3em 0 0.3em;
+    padding: 0.6em 0.3em 0 0.3em;
   }
 }
 
